--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@tanstack/react-query": "4.28",
     "@tanstack/react-query-devtools": "4.28",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-infinite-scroll-component": "6.1",
+    "react-router-dom": "6.10",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
